force-app/main/default/objects/Partner_Event__c/Partner_Event__c.object-meta.xml
<CustomObject>
    <description
  >Events that are part of a media trade agreement with one of our partners.</description>
    <label>Partner Event</label>
    <nameField>
        <label>Partner Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>