force-app/main/default/objects/Partner_Event__c/fields/Event_URL__c.field-meta.xml
<CustomField>
    <fullName>Event_URL__c</fullName>
    <label>Event URL</label>
    <type>Url</type>
</CustomField>