force-app/main/default/objects/Partner_Event__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>The location the event will take place.</description>
    <inlineHelpText>The location the event will take place.</inlineHelpText>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>