force-app/main/default/objects/Partner_Event__c/fields/Staff_Attending__c.field-meta.xml
<CustomField>
    <fullName>Staff_Attending__c</fullName>
    <description
  >Enter in each staff member attending the event, separated by commas.</description>
    <inlineHelpText
  >Enter in each staff member attending the event, separated by commas.</inlineHelpText>
    <label>Staff Attending</label>
    <length>255</length>
    <type>Text</type>
</CustomField>