force-app/main/default/objects/Partner_Event__c/fields/Tickets_number__c.field-meta.xml
<CustomField>
    <fullName>Tickets_number__c</fullName>
    <label>Tickets (#)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>