force-app/main/default/objects/Partner_Event__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>End_Date__c</columns>
    <columns>Event_URL__c</columns>
    <columns>Location__c</columns>
    <columns>Notes__c</columns>
    <columns>Opportunity__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>